# rendering-engine

./: .env.example  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs  models.rs  registry.rs  renderer.rs  settings.rs  template.rs
src/core/: mod.rs  registry.rs  renderer.rs  template.rs
src/routes/: render.rs
src/schemas/: common.rs  render.rs
tests/: pool_scaling_test.rs
