[package]
name = "rendering-engine"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
dotenvy = "0.15.7"
envy = "0.4.2"
headless_chrome = "1.0.18"
once_cell = "1.21.3"
poem = "3.1.12"
poem-openapi = { version = "5.1.16", features = ["swagger-ui"] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.20"
